--- a/app/views/user_mailer/send_invite.html.erb
+++ b/app/views/user_mailer/send_invite.html.erb
@@ -5,7 +5,7 @@ Hello there,
 <% end %>
 
 <p>
-  <%= @invite.inviter.name %> invited to join the <%= @invite.invitable.name %> <%= @invite.invitable_type %>!
+  <%= @invite.inviter.name %> invited you to join the <%= @invite.invitable.name %> <%= @invite.invitable_type %>!
 </p>
 
 Click here to accept the invitation:
