--- a/lib/pdfkit/style.css
+++ b/lib/pdfkit/style.css
@@ -1,4 +1,9 @@
 table {
   width: 100%;
-  border: 1px solid #CCC;
-}
+  border: 1px solid #666; }
+
+.pb1 {
+  padding-bottom: 10px; }
+
+.bb1 {
+  border-bottom: 2px solid #444; }
