--- a/app/views/pdfkit/template.html.erb
+++ b/app/views/pdfkit/template.html.erb
@@ -1,6 +1,8 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="utf8" />
+  <title><%= @project.name %></title>
 </head>
 <body>
   <%= render partial: 'pdfkit/header', locals: { :@title => 'Materials', :@project => @project } %>
@@ -16,5 +18,7 @@
       </tr>
     </table>
   </div>
+  <div class="break"></div>
+  page break
 </body>
 </html>
