--- a/app/views/pdfkit/template.html.erb
+++ b/app/views/pdfkit/template.html.erb
@@ -14,7 +14,7 @@
       </colgroup>
       <tr>
         <td><img id="main-img" src="<%= @project.images.first.file.url(:large) %>" /></td>
-        <td>blah blah</td>
+        <td>material list</td>
       </tr>
     </table>
   </div>
