--- a/app/views/pdfkit/template.html.erb
+++ b/app/views/pdfkit/template.html.erb
@@ -5,20 +5,23 @@
   <title><%= @project.name %></title>
 </head>
 <body>
-  <%= render partial: 'pdfkit/header', locals: { :@title => 'Materials', :@project => @project } %>
-  <div class="pt2">
-    <table>
-      <colgroup>
-        <col width="50%">
-        <col width="50%">
-      </colgroup>
-      <tr>
-        <td><img id="main-img" src="<%= @project.images.first.file.url(:large) %>" /></td>
-        <td>material list</td>
-      </tr>
-    </table>
+  <div class="page bg1">
+    <%= render partial: 'pdfkit/header', locals: { :@title => 'Materials', :@project => @project } %>
+    <div class="pt2">
+      <table>
+        <colgroup>
+          <col width="50%">
+          <col width="50%">
+        </colgroup>
+        <tr>
+          <td><img id="main-img" src="<%= @project.images.first.file.url(:large) %>" /></td>
+          <td>material list</td>
+        </tr>
+      </table>
+    </div>
   </div>
-  <div class="break"></div>
-  page break
+  <div class="page bg2">
+    test
+  </div>
 </body>
 </html>
