--- a/lib/pdfkit/style.css
+++ b/lib/pdfkit/style.css
@@ -1,6 +1,8 @@
 body {
-  font-size: 20px;
-  font-family: Arial, sans-serif; }
+  font-size: 25px;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0; }
 
 table {
   width: 100%;
@@ -72,3 +74,14 @@ table {
 
 .break {
   page-break-before: always !important; }
+
+.page {
+  height: 419mm;
+  width: 596mm; }
+
+.bg1 {
+  background: #eee; }
+
+.bg2 {
+  background: #007dff;
+  color: #fff; }
