--- a/lib/pdfkit/style.scss
+++ b/lib/pdfkit/style.scss
@@ -3,8 +3,10 @@ $b2: 2px solid #444;
 $p1: 25px;
 $p2: 50px;
 body {
-  font-size: 20px;
+  font-size: 25px;
   font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 header {
 }
@@ -88,4 +90,15 @@ table {
 
 .break {
   page-break-before: always !important;
+}
+.page {
+  height: 419mm;
+  width: 596mm;
+}
+.bg1 {
+  background: #eee;
+}
+.bg2 {
+  background: #007dff;
+  color: #fff;
 }
