almost perfect pdf layout

--- a/app/views/pdfkit/template.html.erb
+++ b/app/views/pdfkit/template.html.erb
@@ -19,6 +19,7 @@
         </tr>
       </table>
     </div>
+    <div class="watermark">weavenote</div>
   </div>
   <div class="page bg2">
     test
