--- a/lib/pdfkit/style.css
+++ b/lib/pdfkit/style.css
@@ -3,6 +3,9 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0; }
+  body * {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box; }
 
 table {
   width: 100%;
@@ -13,34 +16,34 @@ table {
   width: 100%; }
 
 .p1 {
-  padding: 25px; }
+  padding: 20px; }
 
 .pt1 {
-  padding-top: 25px; }
+  padding-top: 20px; }
 
 .pr1 {
-  padding-right: 25px; }
+  padding-right: 20px; }
 
 .pb1 {
-  padding-bottom: 25px; }
+  padding-bottom: 20px; }
 
 .pl1 {
-  padding-left: 25px; }
+  padding-left: 20px; }
 
 .p2 {
-  padding: 50px; }
+  padding: 40px; }
 
 .pt2 {
-  padding-top: 50px; }
+  padding-top: 40px; }
 
 .pr2 {
-  padding-right: 50px; }
+  padding-right: 40px; }
 
 .pb2 {
-  padding-bottom: 50px; }
+  padding-bottom: 40px; }
 
 .pl2 {
-  padding-left: 50px; }
+  padding-left: 40px; }
 
 .b1 {
   border: 1px solid #ccc; }
@@ -76,8 +79,16 @@ table {
   page-break-before: always !important; }
 
 .page {
-  height: 419mm;
-  width: 596mm; }
+  height: 418mm;
+  width: 596mm;
+  padding: 40px;
+  position: relative; }
+  .page .watermark {
+    position: absolute;
+    bottom: 40px;
+    left: 40px;
+    opacity: 0.3;
+    font-size: 1.5rem; }
 
 .bg1 {
   background: #eee; }
