--- a/lib/pdfkit/style.scss
+++ b/lib/pdfkit/style.scss
@@ -1,7 +1,4 @@
-$b1: 1px solid #ccc;
-$b2: 2px solid #444;
-$p1: 20px;
-$p2: 40px;
+@import 'utils';
 body {
   font-size: 25px;
   font-family: Arial, sans-serif;
@@ -16,88 +13,45 @@ table {
   width: 100%;
   margin: 0;
   border: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
+  tr {
+    td:first-child {
+      background-color: $dark1;
+    }
+  }
 }
 
-// Specifics
-
-#main-img {
-  width: 100%;
-}
-
-// Utils
-
-.p1 {
-  padding: $p1;
-}
-.pt1 {
-  padding-top: $p1;
-}
-.pr1 {
-  padding-right: $p1;
-}
-.pb1 {
-  padding-bottom: $p1;
-}
-.pl1 {
-  padding-left: $p1;
-}
-
-.p2 {
-  padding: $p2;
-}
-.pt2 {
-  padding-top: $p2;
-}
-.pr2 {
-  padding-right: $p2;
-}
-.pb2 {
-  padding-bottom: $p2;
-}
-.pl2 {
-  padding-left: $p2;
-}
-
-.b1 {
-  border: $b1;
-}
-.bt1 {
-  border-top: $b1;
-}
-.br1 {
-  border-right: $b1;
-}
-.bb1 {
-  border-bottom: $b1;
-}
-.bl1 {
-  border-left: $b1;
-}
-
-.b2 {
-  border: $b2;
-}
-.bt2 {
-  border-top: $b2;
-}
-.br2 {
-  border-right: $b2;
-}
-.bb2 {
-  border-bottom: $b2;
-}
-.bl2 {
-  border-left: $b2;
-}
-
-.break {
-  page-break-before: always !important;
-}
 .page {
-  height: 418mm;
+  height: 419.5mm;
   width: 596mm;
-  padding: $p2;
+  padding: $p2 * 2;
   position: relative;
+  overflow: hidden;
+  .page-insides {
+    height: 100%;
+    background-color: $dark1;
+    table.main {
+      height: 100%;
+      tr.header {
+        height: auto;
+      }
+      tr.body {
+        height: 100%;
+        td.image {
+          line-height: 0;
+          img {
+            height: 100%;
+            max-height: 100%;
+            width: auto;
+          }
+        }
+        td.content {
+          width: 100%;
+        }
+      }
+    }
+  }
   .watermark {
     position: absolute;
     bottom: $p2;
