--- a/lib/pdfkit/style.css
+++ b/lib/pdfkit/style.css
@@ -1,20 +1,3 @@
-body {
-  font-size: 25px;
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0; }
-  body * {
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box; }
-
-table {
-  width: 100%;
-  margin: 0;
-  border: 0; }
-
-#main-img {
-  width: 100%; }
-
 .p1 {
   padding: 20px; }
 
@@ -75,14 +58,47 @@ table {
 .bl2 {
   border-left: 2px solid #444; }
 
-.break {
-  page-break-before: always !important; }
+body {
+  font-size: 25px;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0; }
+  body * {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box; }
+
+table {
+  width: 100%;
+  margin: 0;
+  border: 0;
+  border-collapse: collapse;
+  border-spacing: 0; }
+  table tr td:first-child {
+    background-color: rgba(0, 105, 255, 0.2); }
 
 .page {
-  height: 418mm;
+  height: 419.5mm;
   width: 596mm;
-  padding: 40px;
-  position: relative; }
+  padding: 80px;
+  position: relative;
+  overflow: hidden; }
+  .page .page-insides {
+    height: 100%;
+    background-color: rgba(0, 105, 255, 0.2); }
+    .page .page-insides table.main {
+      height: 100%; }
+      .page .page-insides table.main tr.header {
+        height: auto; }
+      .page .page-insides table.main tr.body {
+        height: 100%; }
+        .page .page-insides table.main tr.body td.image {
+          line-height: 0; }
+          .page .page-insides table.main tr.body td.image img {
+            height: 100%;
+            max-height: 100%;
+            width: auto; }
+        .page .page-insides table.main tr.body td.content {
+          width: 100%; }
   .page .watermark {
     position: absolute;
     bottom: 40px;
