--- a/lib/pdfkit/style.css
+++ b/lib/pdfkit/style.css
@@ -91,14 +91,19 @@ table {
         height: auto; }
       .page .page-insides table.main tr.body {
         height: 100%; }
-        .page .page-insides table.main tr.body td.image {
-          line-height: 0; }
-          .page .page-insides table.main tr.body td.image img {
-            height: 100%;
-            max-height: 100%;
-            width: auto; }
-        .page .page-insides table.main tr.body td.content {
-          width: 100%; }
+        .page .page-insides table.main tr.body > td {
+          width: 50%; }
+        .page .page-insides table.main tr.body td.image .img {
+          width: 100%;
+          height: 100%;
+          background-size: contain;
+          background-position: center;
+          background-repeat: no-repeat; }
+        .page .page-insides table.main tr.body td.image img {
+          height: 100%;
+          max-height: 100%;
+          width: auto;
+          max-width: 100%; }
   .page .watermark {
     position: absolute;
     bottom: 40px;
