--- a/lib/pdfkit/style.scss
+++ b/lib/pdfkit/style.scss
@@ -38,16 +38,22 @@ table {
       }
       tr.body {
         height: 100%;
+        > td {
+          width: 50%;
+        }
         td.image {
-          line-height: 0;
+          .img {
+            width: 100%;
+            height: 100%;
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
+          }
           img {
             height: 100%;
             max-height: 100%;
             width: auto;
           }
-        }
-        td.content {
-          width: 100%;
         }
       }
     }
