--- a/lib/pdfkit/style.css
+++ b/lib/pdfkit/style.css
@@ -102,8 +102,7 @@ table {
         .page .page-insides table.main tr.body td.image img {
           height: 100%;
           max-height: 100%;
-          width: auto;
-          max-width: 100%; }
+          width: auto; }
   .page .watermark {
     position: absolute;
     bottom: 40px;
