--- a/lib/pdfkit/style.css
+++ b/lib/pdfkit/style.css
@@ -1,64 +1,80 @@
 .p1 {
-  padding: 20px; }
+  padding: 10px; }
 
 .pt1 {
-  padding-top: 20px; }
+  padding-top: 10px; }
 
 .pr1 {
-  padding-right: 20px; }
+  padding-right: 10px; }
 
 .pb1 {
-  padding-bottom: 20px; }
+  padding-bottom: 10px; }
 
 .pl1 {
-  padding-left: 20px; }
+  padding-left: 10px; }
 
 .p2 {
-  padding: 40px; }
+  padding: 20px; }
 
 .pt2 {
-  padding-top: 40px; }
+  padding-top: 20px; }
 
 .pr2 {
-  padding-right: 40px; }
+  padding-right: 20px; }
 
 .pb2 {
-  padding-bottom: 40px; }
+  padding-bottom: 20px; }
 
 .pl2 {
+  padding-left: 20px; }
+
+.p3 {
+  padding: 40px; }
+
+.pt3 {
+  padding-top: 40px; }
+
+.pr3 {
+  padding-right: 40px; }
+
+.pb3 {
+  padding-bottom: 40px; }
+
+.pl3 {
   padding-left: 40px; }
 
 .b1 {
-  border: 1px solid #ccc; }
+  border: 2px solid #ccc; }
 
 .bt1 {
-  border-top: 1px solid #ccc; }
+  border-top: 2px solid #ccc; }
 
 .br1 {
-  border-right: 1px solid #ccc; }
+  border-right: 2px solid #ccc; }
 
 .bb1 {
-  border-bottom: 1px solid #ccc; }
+  border-bottom: 2px solid #ccc; }
 
 .bl1 {
-  border-left: 1px solid #ccc; }
+  border-left: 2px solid #ccc; }
 
 .b2 {
-  border: 2px solid #444; }
+  border: 4px solid #999; }
 
 .bt2 {
-  border-top: 2px solid #444; }
+  border-top: 4px solid #999; }
 
 .br2 {
-  border-right: 2px solid #444; }
+  border-right: 4px solid #999; }
 
 .bb2 {
-  border-bottom: 2px solid #444; }
+  border-bottom: 4px solid #999; }
 
 .bl2 {
-  border-left: 2px solid #444; }
+  border-left: 4px solid #999; }
 
 body {
+  color: #333;
   font-size: 25px;
   font-family: Arial, sans-serif;
   margin: 0;
@@ -73,8 +89,6 @@ table {
   border: 0;
   border-collapse: collapse;
   border-spacing: 0; }
-  table tr td:first-child {
-    background-color: rgba(0, 105, 255, 0.2); }
 
 .page {
   height: 419.5mm;
@@ -82,37 +96,44 @@ table {
   padding: 80px;
   position: relative;
   overflow: hidden; }
-  .page .page-insides {
-    height: 100%;
-    background-color: rgba(0, 105, 255, 0.2); }
-    .page .page-insides table.main {
+  .page table.main {
+    height: 100%; }
+    .page table.main tr.header {
+      height: auto; }
+      .page table.main tr.header table tr td {
+        padding: 20px; }
+    .page table.main tr.body {
       height: 100%; }
-      .page .page-insides table.main tr.header {
-        height: auto; }
-      .page .page-insides table.main tr.body {
-        height: 100%; }
-        .page .page-insides table.main tr.body > td {
-          width: 50%; }
-        .page .page-insides table.main tr.body td.image .img {
-          width: 100%;
-          height: 100%;
-          background-size: contain;
-          background-position: center;
-          background-repeat: no-repeat; }
-        .page .page-insides table.main tr.body td.image img {
-          height: 100%;
-          max-height: 100%;
-          width: auto; }
-  .page .watermark {
+      .page table.main tr.body > td {
+        width: 50%; }
+      .page table.main tr.body td.image .img {
+        width: 100%;
+        height: 100%;
+        background-size: contain;
+        background-position: center top;
+        background-repeat: no-repeat; }
+      .page table.main tr.body td.image img {
+        height: 100%;
+        max-height: 100%;
+        width: auto; }
+      .page table.main tr.body td.content {
+        padding: 20px;
+        vertical-align: top; }
+  .page:after {
+    content: 'weavenote';
+    display: block;
     position: absolute;
     bottom: 40px;
     left: 40px;
     opacity: 0.3;
     font-size: 1.5rem; }
 
-.bg1 {
-  background: #eee; }
+table.data > tr > td {
+  padding: 10px; }
+table.data > tr:not(:last-child) td {
+  border-bottom: 2px solid #ccc; }
 
-.bg2 {
-  background: #007dff;
-  color: #fff; }
+table.rows .row:not(:last-child) > td {
+  padding-bottom: 40px;
+  margin-bottom: 40px;
+  border-bottom: 4px solid #999; }
