--- a/lib/pdfkit/style.scss
+++ b/lib/pdfkit/style.scss
@@ -1,5 +1,6 @@
 @import 'utils';
 body {
+  color: #333;
   font-size: 25px;
   font-family: Arial, sans-serif;
   margin: 0;
@@ -15,61 +16,79 @@ table {
   border: 0;
   border-collapse: collapse;
   border-spacing: 0;
-  tr {
-    td:first-child {
-      background-color: $dark1;
-    }
-  }
 }
 
 .page {
   height: 419.5mm;
   width: 596mm;
-  padding: $p2 * 2;
+  padding: $p3 * 2;
   position: relative;
   overflow: hidden;
-  .page-insides {
+  table.main {
     height: 100%;
-    background-color: $dark1;
-    table.main {
-      height: 100%;
-      tr.header {
-        height: auto;
-      }
-      tr.body {
-        height: 100%;
-        > td {
-          width: 50%;
-        }
-        td.image {
-          .img {
-            width: 100%;
-            height: 100%;
-            background-size: contain;
-            background-position: center;
-            background-repeat: no-repeat;
-          }
-          img {
-            height: 100%;
-            max-height: 100%;
-            width: auto;
+    tr.header {
+      height: auto;
+      table {
+        tr {
+          td {
+            padding: $p2;
           }
         }
       }
     }
+    tr.body {
+      height: 100%;
+      > td {
+        width: 50%;
+      }
+      td.image {
+        .img {
+          width: 100%;
+          height: 100%;
+          background-size: contain;
+          background-position: center top;
+          background-repeat: no-repeat;
+        }
+        img {
+          height: 100%;
+          max-height: 100%;
+          width: auto;
+        }
+      }
+      td.content {
+        padding: $p2;
+        vertical-align: top;
+      }
+    }
   }
-  .watermark {
+  &:after {
+    content: 'weavenote';
+    display: block;
     position: absolute;
-    bottom: $p2;
-    left: $p2;
+    bottom: $p3;
+    left: $p3;
     opacity: 0.3;
     font-size: 1.5rem;
   }
 }
-.bg1 {
-  background: #eee;
+table.data {
+  > tr {
+    > td {
+      padding: $p1;
+    }
+    &:not(:last-child) {
+      td {
+        border-bottom: $b1;
+      }
+    }
+  }
 }
-.bg2 {
-  background: #007dff;
-  color: #fff;
+table.rows {
+  .row:not(:last-child) {
+    > td {
+      padding-bottom: $p3;
+      margin-bottom: $p3;
+      border-bottom: $b2;
+    }
+  }
 }
