--- a/lib/pdfkit/utils.scss
+++ b/lib/pdfkit/utils.scss
@@ -1,7 +1,8 @@
-$b1: 1px solid #ccc;
-$b2: 2px solid #444;
-$p1: 20px;
-$p2: 40px;
+$b1: 2px solid #ccc;
+$b2: 4px solid #999;
+$p1: 10px;
+$p2: 20px;
+$p3: 40px;
 $dark1: rgba(0, 105, 255, 0.20);
 .p1 {
   padding: $p1;
@@ -33,6 +34,22 @@ $dark1: rgba(0, 105, 255, 0.20);
 }
 .pl2 {
   padding-left: $p2;
+}
+
+.p3 {
+  padding: $p3;
+}
+.pt3 {
+  padding-top: $p3;
+}
+.pr3 {
+  padding-right: $p3;
+}
+.pb3 {
+  padding-bottom: $p3;
+}
+.pl3 {
+  padding-left: $p3;
 }
 
 .b1 {
