--- a/app/views/spec_sheet/_page.html.erb
+++ b/app/views/spec_sheet/_page.html.erb
@@ -1,8 +1,12 @@
 <div class="page">
   <table class="main">
-    <%= render partial: 'spec_sheet/header', locals: { title: title, project: project } %>
+    <tr class="header">
+      <td colspan="2">
+        <%= render partial: 'spec_sheet/header', locals: { title: title, project: project } %>
+      </td>
+    </tr>
     <tr class="body">
-      <td class="image">
+      <td class="image pt3">
         <div class="img" style="background-image:url('<%= project.images.first.file.url(:large) %>');"></div>
       </td>
       <td class="content">
