--- a/lib/pdfkit/style.css
+++ b/lib/pdfkit/style.css
@@ -44,37 +44,37 @@
   padding-left: 40px; }
 
 .b1 {
-  border: 2px solid #ccc; }
+  border: 2px solid #EEE; }
 
 .bt1 {
-  border-top: 2px solid #ccc; }
+  border-top: 2px solid #EEE; }
 
 .br1 {
-  border-right: 2px solid #ccc; }
+  border-right: 2px solid #EEE; }
 
 .bb1 {
-  border-bottom: 2px solid #ccc; }
+  border-bottom: 2px solid #EEE; }
 
 .bl1 {
-  border-left: 2px solid #ccc; }
+  border-left: 2px solid #EEE; }
 
 .b2 {
-  border: 4px solid #999; }
+  border: 4px solid #CCC; }
 
 .bt2 {
-  border-top: 4px solid #999; }
+  border-top: 4px solid #CCC; }
 
 .br2 {
-  border-right: 4px solid #999; }
+  border-right: 4px solid #CCC; }
 
 .bb2 {
-  border-bottom: 4px solid #999; }
+  border-bottom: 4px solid #CCC; }
 
 .bl2 {
-  border-left: 4px solid #999; }
+  border-left: 4px solid #CCC; }
 
 body {
-  color: #333;
+  color: #444;
   font-size: 25px;
   font-family: Arial, sans-serif;
   margin: 0;
@@ -117,23 +117,30 @@ table {
         max-height: 100%;
         width: auto; }
       .page table.main tr.body td.content {
-        padding: 20px;
+        padding-top: 40px;
+        padding-left: 40px;
         vertical-align: top; }
   .page:after {
     content: 'weavenote';
     display: block;
     position: absolute;
-    bottom: 40px;
-    left: 40px;
-    opacity: 0.3;
-    font-size: 1.5rem; }
+    bottom: 80px;
+    left: 80px;
+    opacity: 0.6;
+    font-size: 2rem;
+    z-index: 2; }
 
-table.data > tr > td {
+table.data > tbody > tr > td {
   padding: 10px; }
-table.data > tr:not(:last-child) td {
-  border-bottom: 2px solid #ccc; }
+table.data > tbody > tr:not(:last-child) td {
+  border-bottom: 2px solid #EEE; }
 
-table.rows .row:not(:last-child) > td {
+table.rows > tbody > tr:not(:last-child) > td {
   padding-bottom: 40px;
-  margin-bottom: 40px;
-  border-bottom: 4px solid #999; }
+  border-bottom: 4px solid #CCC; }
+  table.rows > tbody > tr:not(:last-child) > td table.data tr:last-child td {
+    padding-bottom: 0 !important; }
+table.rows > tbody > tr:not(:first-child) > td {
+  padding-top: 40px; }
+  table.rows > tbody > tr:not(:first-child) > td table.data tr:first-child td {
+    padding-top: 0 !important; }
