--- a/lib/pdfkit/style.scss
+++ b/lib/pdfkit/style.scss
@@ -1,6 +1,6 @@
 @import 'utils';
 body {
-  color: #333;
+  color: #444;
   font-size: 25px;
   font-family: Arial, sans-serif;
   margin: 0;
@@ -56,7 +56,8 @@ table {
         }
       }
       td.content {
-        padding: $p2;
+        padding-top: $p3;
+        padding-left: $p3;
         vertical-align: top;
       }
     }
@@ -65,30 +66,53 @@ table {
     content: 'weavenote';
     display: block;
     position: absolute;
-    bottom: $p3;
-    left: $p3;
-    opacity: 0.3;
-    font-size: 1.5rem;
+    bottom: $p3 * 2;
+    left: $p3 * 2;
+    opacity: 0.6;
+    font-size: 2rem;
+    z-index: 2;
   }
 }
 table.data {
-  > tr {
-    > td {
-      padding: $p1;
-    }
-    &:not(:last-child) {
-      td {
-        border-bottom: $b1;
+  > tbody {
+    > tr {
+      > td {
+        padding: $p1;
+      }
+      &:not(:last-child) {
+        td {
+          border-bottom: $b1;
+        }
       }
     }
   }
 }
 table.rows {
-  .row:not(:last-child) {
-    > td {
-      padding-bottom: $p3;
-      margin-bottom: $p3;
-      border-bottom: $b2;
+  > tbody {
+    > tr:not(:last-child) {
+      > td {
+        padding-bottom: $p3;
+        border-bottom: $b2;
+        table.data {
+          tr:last-child {
+            td {
+              padding-bottom: 0!important;
+            }
+          }
+        }
+      }
+    }
+    > tr:not(:first-child) {
+      > td {
+        padding-top: $p3;
+        table.data {
+          tr:first-child {
+            td {
+              padding-top: 0!important;
+            }
+          }
+        }
+      }
     }
   }
 }
