spec sheet updates

--- a/app/views/spec_sheet/_page.html.erb
+++ b/app/views/spec_sheet/_page.html.erb
@@ -1,7 +1,7 @@
 <div class="page">
   <table class="main">
-    <tr class="header">
-      <td colspan="2">
+    <tr>
+      <td colspan="2" class="header">
         <%= render partial: 'spec_sheet/header', locals: { title: title, project: project } %>
       </td>
     </tr>
