--- a/app/views/spec_sheet/_header.html.erb
+++ b/app/views/spec_sheet/_header.html.erb
@@ -1,33 +1,36 @@
-<table class="bb2">
-  <colgroup>
-    <col width="40%">
-    <col width="60%">
-  </colgroup>
-  <tr>
-    <td>
-      <h1><%= title %></h1>
-    </td>
-    <td>
-      <table>
-        <tr>
-          <td><b>Name</b></td>
-          <td><%= project.name %></td>
-          <td><b>Collection</b></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td><b>Reference no.</b></td>
-          <td><%= project.identifier %></td>
-          <td><b>Contact</b></td>
-          <td><%= project.organization.owner.email %></td>
-        </tr>
-        <tr>
-          <td><b>Color code</b></td>
-          <td></td>
-          <td><b>Organization</b></td>
-          <td><%= project.organization.name %></td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>
+<div class="pb2 bb2">
+  <table>
+    <colgroup>
+      <col width="40%">
+      <col width="60%">
+    </colgroup>
+    <tr>
+      <td>
+        <div class="app-title">weavenote</div>
+        <h1 class="page-title"><%= title %></h1>
+      </td>
+      <td>
+        <table class="project-info">
+          <tr>
+            <td><b>Project name</b></td>
+            <td><%= project.name %></td>
+            <td><b>Collection</b></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td><b>Reference no.</b></td>
+            <td><%= project.identifier %></td>
+            <td><b>Contact</b></td>
+            <td><%= project.organization.owner.email %></td>
+          </tr>
+          <tr>
+            <td><b>Color code</b></td>
+            <td></td>
+            <td><b>Organization</b></td>
+            <td><%= project.organization.name %></td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+</div>
