--- a/app/views/spec_sheet/_measurements.html.erb
+++ b/app/views/spec_sheet/_measurements.html.erb
@@ -3,30 +3,35 @@
   names = data.measurement_names
   values = data.measurement_values
 %>
-<table class="measurements">
-  <thead>
-    <tr>
-      <td>Description</td>
-      <% groups.each do |group| %>
-        <td><%= group.name %></td>
-      <% end %>
-    </tr>
-  </thead>
-  <tbody>
-    <% names.each do |name| %>
+<td class="image pt3">
+  <div class="img" style="background-image:url('<%= project.images.first.file.url(:large) %>');"></div>
+</td>
+<td class="content">
+  <table class="measurements">
+    <thead>
       <tr>
-        <td>
-          <b class="pr1"><%= name.identifier %></b>
-          <%= name.value %>
-        </td>
+        <td>Description</td>
         <% groups.each do |group| %>
-          <% data.measurement_values!.each do |value| %>
-            <% next unless value.group.id == group.id %>
-            <% next unless value.name.id == name.id %>
-            <td><%= value.value %></td>
-          <% end %>
+          <td><%= group.name %></td>
         <% end %>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% names.each do |name| %>
+        <tr>
+          <td>
+            <b class="pr1"><%= name.identifier %></b>
+            <%= name.value %>
+          </td>
+          <% groups.each do |group| %>
+            <% data.measurement_values!.each do |value| %>
+              <% next unless value.group.id == group.id %>
+              <% next unless value.name.id == name.id %>
+              <td><%= value.value %></td>
+            <% end %>
+          <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</td>
