--- a/lib/pdfkit/style.css
+++ b/lib/pdfkit/style.css
@@ -44,36 +44,41 @@
   padding-left: 40px; }
 
 .b1 {
-  border: 2px solid #EEE; }
+  border: 2px solid #eee; }
 
 .bt1 {
-  border-top: 2px solid #EEE; }
+  border-top: 2px solid #eee; }
 
 .br1 {
-  border-right: 2px solid #EEE; }
+  border-right: 2px solid #eee; }
 
 .bb1 {
-  border-bottom: 2px solid #EEE; }
+  border-bottom: 2px solid #eee; }
 
 .bl1 {
-  border-left: 2px solid #EEE; }
+  border-left: 2px solid #eee; }
 
 .b2 {
-  border: 4px solid #CCC; }
+  border: 4px solid #ccc; }
 
 .bt2 {
-  border-top: 4px solid #CCC; }
+  border-top: 4px solid #ccc; }
 
 .br2 {
-  border-right: 4px solid #CCC; }
+  border-right: 4px solid #ccc; }
 
 .bb2 {
-  border-bottom: 4px solid #CCC; }
+  border-bottom: 4px solid #ccc; }
 
 .bl2 {
-  border-left: 4px solid #CCC; }
+  border-left: 4px solid #ccc; }
 
-h1, h2, h3 {
+.vtop {
+  vertical-align: top !important; }
+
+h1,
+h2,
+h3 {
   margin: 0; }
 
 body {
@@ -133,17 +138,17 @@ table {
     bottom: 80px;
     right: 80px;
     opacity: 0.6;
-    font-size: 2rem;
+    font-size: 1.5rem;
     z-index: 2; }
 
 table.data > tbody > tr > td {
   padding: 10px; }
 table.data > tbody > tr:not(:last-child) td {
-  border-bottom: 2px solid #EEE; }
+  border-bottom: 2px solid #eee; }
 
 table.rows > tbody > tr:not(:last-child) > td {
   padding-bottom: 40px;
-  border-bottom: 4px solid #CCC; }
+  border-bottom: 4px solid #ccc; }
   table.rows > tbody > tr:not(:last-child) > td table.data tr:last-child td {
     padding-bottom: 0 !important; }
 table.rows > tbody > tr:not(:first-child) > td {
@@ -158,7 +163,7 @@ table.measurements {
   table.measurements thead td:first-child {
     color: rgba(0, 0, 0, 0.5); }
   table.measurements tr td {
-    border: 2px solid #CCC;
+    border: 2px solid #ccc;
     padding: 20px; }
   table.measurements tr:not(:last-child) td {
     border-bottom: none; }
