--- a/lib/pdfkit/style.css
+++ b/lib/pdfkit/style.css
@@ -118,16 +118,6 @@ table {
       height: 100%; }
       .page table.main tr.body > td {
         width: 50%; }
-      .page table.main tr.body td.image .img {
-        width: 100%;
-        height: 100%;
-        background-size: contain;
-        background-position: center top;
-        background-repeat: no-repeat; }
-      .page table.main tr.body td.image img {
-        height: 100%;
-        max-height: 100%;
-        width: auto; }
       .page table.main tr.body td.content {
         padding-top: 40px;
         padding-left: 40px;
@@ -167,3 +157,35 @@ table.measurements {
     padding: 20px; }
   table.measurements tr:not(:last-child) td {
     border-bottom: none; }
+
+table.instructions {
+  width: 100%;
+  height: 100%; }
+  table.instructions > tbody > tr:not(:last-child) > td {
+    padding-bottom: 40px; }
+  table.instructions > tbody > tr > td {
+    padding-top: 40px;
+    vertical-align: top; }
+    table.instructions > tbody > tr > td table.instruction {
+      height: 100%;
+      width: 100%; }
+      table.instructions > tbody > tr > td table.instruction > tbody tr td.instruction-text {
+        vertical-align: top; }
+      table.instructions > tbody > tr > td table.instruction > tbody tr.instruction-images {
+        height: 100%; }
+        table.instructions > tbody > tr > td table.instruction > tbody tr.instruction-images td:not(:last-child) {
+          padding-right: 20px; }
+    table.instructions > tbody > tr > td:first-child {
+      padding-right: 40px; }
+    table.instructions > tbody > tr > td:last-child {
+      padding-left: 40px; }
+
+.img {
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  background-position: center top;
+  background-repeat: no-repeat; }
+
+.img-left {
+  background-position: left top; }
