add image_url method

--- a/app/views/spec_sheet/_components.html.erb
+++ b/app/views/spec_sheet/_components.html.erb
@@ -1,6 +1,6 @@
 <% components = data %>
 <td class="image pt3">
-  <div class="img" style="background-image:url('<%= project.images.first.file.url(:large) %>');"></div>
+  <div class="img" style="background-image:url('<%= project.image_url %>');"></div>
 </td>
 <td class="content">
   <table class="rows">
