--- a/app/views/spec_sheet/_measurements.html.erb
+++ b/app/views/spec_sheet/_measurements.html.erb
@@ -4,7 +4,7 @@
   values = data.measurement_values
 %>
 <td class="image pt3">
-  <div class="img" style="background-image:url('<%= project.images.first.file.url(:large) %>');"></div>
+  <div class="img" style="background-image:url('<%= project.image_url %>');"></div>
 </td>
 <td class="content">
   <table class="measurements">
