--- a/app/views/spec_sheet/index.html.erb
+++ b/app/views/spec_sheet/index.html.erb
@@ -1,35 +1,53 @@
-<% pagenumber = 1 %>
-<!doctype html>
+<% 
+pagenumber = 1 
+@components = @project.components
+@measurements = @project.measurement_values
+@instructions = @project.instructions
+def anything?
+  @components.any? && @measurements.any? && @instructions.any?
+end
+%><!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf8" />
   <title><%= @project.name %></title>
 </head>
 <body>
-  <% if @project.components.any? %>
-    <% @project.components.each_slice(3) do |components| %>
+
+  <% unless anything? %>
+    <%= render({
+      partial: 'spec_sheet/page', 
+      locals: { title: 'New project', project: @project, data: @project, view: 'new', pagenumber: pagenumber }
+    }) %>
+  <% end %>
+
+  <% if @components.any? %>
+    <% @components.each_slice(3) do |slice| %>
       <%= render({
         partial: 'spec_sheet/page', 
-        locals: { title: 'Materials', project: @project, data: components, view: 'components', pagenumber: pagenumber }
+        locals: { title: 'Materials', project: @project, data: slice, view: 'components', pagenumber: pagenumber }
       }) %>
       <% pagenumber += 1 %>
     <% end %>
   <% end %>
-  <% if @project.measurement_values.any? %>
+
+  <% if @measurements.any? %>
     <%= render({
       partial: 'spec_sheet/page', 
       locals: { title: 'Measurements', project: @project, data: @project, view: 'measurements', pagenumber: pagenumber }
     }) %>
     <% pagenumber += 1 %>
   <% end %>
-  <% if @project.instructions.any? %>
-    <% @project.instructions.each_slice(4) do |instructions| %>
+
+  <% if @instructions.any? %>
+    <% @instructions.each_slice(4) do |slice| %>
       <%= render({
         partial: 'spec_sheet/page', 
-        locals: { title: 'Instructions', project: @project, data: instructions, view: 'instructions', pagenumber: pagenumber }
+        locals: { title: 'Instructions', project: @project, data: slice, view: 'instructions', pagenumber: pagenumber }
       }) %>
       <% pagenumber += 1 %>
     <% end %>
   <% end %>
+
 </body>
 </html>
