--- a/app/views/spec_sheet/_measurements.html.erb
+++ b/app/views/spec_sheet/_measurements.html.erb
@@ -6,7 +6,7 @@
 <td class="image pt3">
   <div class="img" style="background-image:url('<%= project.image_url %>');"></div>
 </td>
-<td class="content">
+<td class="content pt3">
   <table class="measurements">
     <thead>
       <tr>
