--- a/app/views/spec_sheet/_components.html.erb
+++ b/app/views/spec_sheet/_components.html.erb
@@ -4,6 +4,10 @@
 </td>
 <td class="content">
   <table class="rows">
+    <colgroup>
+      <col width="60%">
+      <col width="40%">
+    </colgroup>
     <% components.each do |component| %>
       <%= render partial: "spec_sheet/component", locals: { component: component } %>
     <% end %>
