--- a/lib/pdfkit/style.css
+++ b/lib/pdfkit/style.css
@@ -119,7 +119,6 @@ table {
       .page table.main tr.body > td {
         width: 50%; }
       .page table.main tr.body td.content {
-        padding-top: 40px;
         padding-left: 40px;
         vertical-align: top; }
   .page .page-number {
@@ -136,15 +135,15 @@ table.data > tbody > tr > td {
 table.data > tbody > tr:not(:last-child) td {
   border-bottom: 2px solid #eee; }
 
+table.rows > tbody > tr > td {
+  padding-top: 40px; }
 table.rows > tbody > tr:not(:last-child) > td {
   padding-bottom: 40px;
   border-bottom: 4px solid #ccc; }
   table.rows > tbody > tr:not(:last-child) > td table.data tr:last-child td {
     padding-bottom: 0 !important; }
-table.rows > tbody > tr:not(:first-child) > td {
-  padding-top: 40px; }
-  table.rows > tbody > tr:not(:first-child) > td table.data tr:first-child td {
-    padding-top: 0 !important; }
+table.rows > tbody > tr:not(:first-child) > td table.data tr:first-child td {
+  padding-top: 0 !important; }
 
 table.measurements {
   width: auto;
@@ -189,3 +188,17 @@ table.instructions {
 
 .img-left {
   background-position: left top; }
+
+.img-right {
+  background-position: left top; }
+
+td.material-img {
+  position: relative; }
+  td.material-img .img {
+    position: absolute;
+    top: 40px;
+    right: 0;
+    bottom: 40px;
+    left: 0;
+    height: auto;
+    width: auto; }
