--- a/lib/pdfkit/style.scss
+++ b/lib/pdfkit/style.scss
@@ -54,7 +54,6 @@ table {
         width: 50%;
       }
       td.content {
-        padding-top: $p3;
         padding-left: $p3;
         vertical-align: top;
       }
@@ -86,6 +85,11 @@ table.data {
 }
 table.rows {
   > tbody {
+    > tr {
+      > td {
+        padding-top: $p3;
+      }
+    }
     > tr:not(:last-child) {
       > td {
         padding-bottom: $p3;
@@ -101,7 +105,6 @@ table.rows {
     }
     > tr:not(:first-child) {
       > td {
-        padding-top: $p3;
         table.data {
           tr:first-child {
             td {
@@ -183,4 +186,19 @@ table.instructions {
 }
 .img-left {
   background-position: left top;
+}
+.img-right {
+  background-position: right top;
+}
+td.material-img {
+  position: relative;
+  .img {
+    position: absolute;
+    top: $p3;
+    right: 0;
+    bottom: $p3;
+    left: 0;
+    height: auto;
+    width: auto;
+  }
 }
