add missing attributes

--- a/app/views/spec_sheet/_header.html.erb
+++ b/app/views/spec_sheet/_header.html.erb
@@ -19,7 +19,7 @@
             <td><b>Project name</b></td>
             <td><%= project.name %></td>
             <td><b>Collection</b></td>
-            <td></td>
+            <td><%= project.collection %></td>
           </tr>
           <tr>
             <td><b>Reference no.</b></td>
@@ -29,7 +29,7 @@
           </tr>
           <tr>
             <td><b>Color code</b></td>
-            <td></td>
+            <td><%= project.color_code %></td>
             <td><b>Organization</b></td>
             <td><%= project.organization.name %></td>
           </tr>
