--- a/lib/pdfkit/utils.scss
+++ b/lib/pdfkit/utils.scss
@@ -5,6 +5,7 @@ $dark1: rgba(0, 0, 0, 0.10);
 $dark2: rgba(0, 0, 0, 0.20);
 $b1: 2px solid #eee;
 $b2: 4px solid #ccc;
+$b3: 2px solid #ccc;
 .p1 {
   padding: $p1;
 }
