--- a/app/views/spec_sheet/_component.html.erb
+++ b/app/views/spec_sheet/_component.html.erb
@@ -20,11 +20,11 @@
       </tr>
       <tr>
         <td><b>Reference no.</b></td>
-        <td><%= material.identifier %></td>
+        <td><%= material.reference %></td>
       </tr>
       <tr>
         <td><b>Color</b></td>
-        <td><%= material.color.name %></td>
+        <td><%= material.color %></td>
       </tr>
     </table>
   </td>
