--- a/app/views/spec_sheet/_measurements.html.erb
+++ b/app/views/spec_sheet/_measurements.html.erb
@@ -4,7 +4,7 @@
   values = data.measurement_values
 %>
 <td class="image pt3">
-  <div class="img" style="background-image:url('<%= project.image_url %>');"></div>
+  <%= render partial: "spec_sheet/image", locals: { src: project.image_url, annotations: project.measurement_annotations } %>
 </td>
 <td class="content pt3">
   <table class="measurements">
