--- a/lib/pdfkit/style.scss
+++ b/lib/pdfkit/style.scss
@@ -224,6 +224,22 @@ table.comments {
   background-size: contain;
   background-position: center top;
   background-repeat: no-repeat;
+  position: relative;
+  .anchor {
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 999px;
+    height: 5px;
+    width: 5px;
+    background: lime;
+    &.dot {
+      width: 40px;
+      height: 40px;
+      background: aqua;
+      border: 5px solid white;
+    }
+  }
 }
 .img-left {
   background-position: left top;
