--- a/app/views/spec_sheet/_components.html.erb
+++ b/app/views/spec_sheet/_components.html.erb
@@ -1,14 +1,30 @@
 <% components = data %>
-<td class="image pt3">
-  <%= render partial: "spec_sheet/image", locals: { src: project.image_url, annotations: project.comment_annotations } %>
-</td>
-<td class="content">
-  <table class="rows">
-    <colgroup>
-      <col width="100%">
-    </colgroup>
-    <% components.each do |component| %>
-      <%= render partial: "spec_sheet/component", locals: { component: component } %>
-    <% end %>
+<td colspan="2" class="vtop pt3">
+  <table class="components">
+    <thead>
+      <tr>
+        <td>Image</td>
+        <td>Name</td>
+        <td>Type</td>
+        <td>Quantity</td>
+        <td>Supplier</td>
+        <td>Reference</td>
+        <td>Color</td>
+      </tr>
+    </head>
+    <tbody>
+      <% components.each do |component| %>
+        <% material = component.material %>
+        <tr>
+          <td></td>
+          <td><%= material.name %></td>
+          <td><%= material.type.name %></td>
+          <td><%= component.quantity %></td>
+          <td><%= material.supplier_name %></td>
+          <td><%= material.reference %></td>
+          <td><%= material.color %></td>
+        </tr>
+      <% end %>
+    </tbody>
   </table>
 </td>
