--- a/app/views/spec_sheet/_image.html.erb
+++ b/app/views/spec_sheet/_image.html.erb
@@ -1,5 +1,5 @@
 <div class="img" style="background-image:url('<%= src %>');">
-  <% if annotations
+  <% if defined?(annotations)
     annotations.each do |a| 
       a.anchors.each do |o| %>
         <div class="anchor <%= a.type %>" style="top: <%= o.y_percent %>; left: <%= o.x_percent %>;"></div>
