--- a/lib/pdfkit/sass/style.scss
+++ b/lib/pdfkit/sass/style.scss
@@ -1,4 +1,8 @@
 @import 'utils';
+@import 'modules/comments';
+@import 'modules/cover';
+@import 'modules/instructions';
+@import 'modules/measurements';
 h1,
 h2,
 h3 {
@@ -116,108 +120,6 @@ table.rows {
     }
   }
 }
-table.measurements {
-  width: auto;
-  border-collapse: separate;
-  border-spacing: 8px 0;
-  thead {
-    td:first-child {
-      color: rgba(0, 0, 0, 0.5);
-    }
-  }
-  tr {
-    td {
-      border: 2px solid #ccc;
-      padding: $p2;
-    }
-    &:not(:last-child) {
-      td {
-        border-bottom: none;
-      }
-    }
-  }
-}
-table.instructions {
-  width: 100%;
-  height: 100%;
-  > tbody {
-    > tr {
-      &:not(:last-child) {
-        > td {
-          padding-bottom: $p3;
-        }
-      }
-      > td {
-        padding-top: $p3;
-        vertical-align: top;
-        table.instruction {
-          height: 100%;
-          width: 100%;
-          > tbody {
-            tr {
-              td.instruction-text {
-                vertical-align: top;
-              }
-              &.instruction-images {
-                height: 100%;
-                td:not(:last-child) {
-                  padding-right: $p2;
-                }
-              }
-            }
-          }
-        }
-        &:first-child {
-          padding-right: $p3;
-        }
-        &:last-child {
-          padding-left: $p3;
-        }
-      }
-    }
-  }
-}
-table.comments {
-  tr {
-    td {
-      vertical-align: top;
-      .comment {
-        border: $b3;
-        padding: $p2;
-        margin-top: $p2;
-        .author {
-          margin-bottom: $p2;
-          color: #555;
-          .date {
-            opacity: 0.8;
-            float: right;
-            font-size: 0.9em;
-            text-align: right;
-            min-width: 200px;
-          }
-        }
-        .replies {
-          .comment {
-            border: $b1;
-          }
-        }
-        .comment-images {
-          height: 150px;
-        }
-      }
-      &:first-child {
-        .comment {
-          margin-right: $p1;
-        }
-      }
-      &:last-child {
-        .comment {
-          margin-left: $p1;
-        }
-      }
-    }
-  }
-}
 .img {
   width: 100%;
   height: 100%;
@@ -259,7 +161,6 @@ td.material-img {
     width: auto;
   }
 }
-.y-fill {
-  height: 100%;
-  box-sizing: border-box;
+thead {
+  font-weight: bold;
 }
