--- a/lib/pdfkit/style.css
+++ b/lib/pdfkit/style.css
@@ -76,6 +76,78 @@
 .vtop {
   vertical-align: top !important; }
 
+.center {
+  text-align: center; }
+
+.y-fill {
+  height: 100%;
+  box-sizing: border-box; }
+
+table.comments tr td {
+  vertical-align: top; }
+  table.comments tr td .comment {
+    border: 2px solid #ccc;
+    padding: 20px;
+    margin-top: 20px; }
+    table.comments tr td .comment .author {
+      margin-bottom: 20px;
+      color: #555; }
+      table.comments tr td .comment .author .date {
+        opacity: 0.8;
+        float: right;
+        font-size: 0.9em;
+        text-align: right;
+        min-width: 200px; }
+    table.comments tr td .comment .replies .comment {
+      border: 2px solid #eee; }
+    table.comments tr td .comment .comment-images {
+      height: 150px; }
+  table.comments tr td:first-child .comment {
+    margin-right: 10px; }
+  table.comments tr td:last-child .comment {
+    margin-left: 10px; }
+
+table.cover {
+  height: 100%; }
+  table.cover > tbody tr:first-child {
+    height: 70%; }
+  table.cover > tbody tr:nth-child(2) {
+    height: 30%; }
+
+table.instructions {
+  width: 100%;
+  height: 100%; }
+  table.instructions > tbody > tr:not(:last-child) > td {
+    padding-bottom: 40px; }
+  table.instructions > tbody > tr > td {
+    padding-top: 40px;
+    vertical-align: top; }
+    table.instructions > tbody > tr > td table.instruction {
+      height: 100%;
+      width: 100%; }
+      table.instructions > tbody > tr > td table.instruction > tbody tr td.instruction-text {
+        vertical-align: top; }
+      table.instructions > tbody > tr > td table.instruction > tbody tr.instruction-images {
+        height: 100%; }
+        table.instructions > tbody > tr > td table.instruction > tbody tr.instruction-images td:not(:last-child) {
+          padding-right: 20px; }
+    table.instructions > tbody > tr > td:first-child {
+      padding-right: 40px; }
+    table.instructions > tbody > tr > td:last-child {
+      padding-left: 40px; }
+
+table.measurements {
+  width: auto;
+  border-collapse: separate;
+  border-spacing: 8px 0; }
+  table.measurements thead td:first-child {
+    color: rgba(0, 0, 0, 0.5); }
+  table.measurements tr td {
+    border: 2px solid #ccc;
+    padding: 20px; }
+  table.measurements tr:not(:last-child) td {
+    border-bottom: none; }
+
 h1,
 h2,
 h3 {
@@ -145,64 +217,6 @@ table.rows > tbody > tr:not(:last-child) > td {
 table.rows > tbody > tr:not(:first-child) > td table.data tr:first-child td {
   padding-top: 0 !important; }
 
-table.measurements {
-  width: auto;
-  border-collapse: separate;
-  border-spacing: 8px 0; }
-  table.measurements thead td:first-child {
-    color: rgba(0, 0, 0, 0.5); }
-  table.measurements tr td {
-    border: 2px solid #ccc;
-    padding: 20px; }
-  table.measurements tr:not(:last-child) td {
-    border-bottom: none; }
-
-table.instructions {
-  width: 100%;
-  height: 100%; }
-  table.instructions > tbody > tr:not(:last-child) > td {
-    padding-bottom: 40px; }
-  table.instructions > tbody > tr > td {
-    padding-top: 40px;
-    vertical-align: top; }
-    table.instructions > tbody > tr > td table.instruction {
-      height: 100%;
-      width: 100%; }
-      table.instructions > tbody > tr > td table.instruction > tbody tr td.instruction-text {
-        vertical-align: top; }
-      table.instructions > tbody > tr > td table.instruction > tbody tr.instruction-images {
-        height: 100%; }
-        table.instructions > tbody > tr > td table.instruction > tbody tr.instruction-images td:not(:last-child) {
-          padding-right: 20px; }
-    table.instructions > tbody > tr > td:first-child {
-      padding-right: 40px; }
-    table.instructions > tbody > tr > td:last-child {
-      padding-left: 40px; }
-
-table.comments tr td {
-  vertical-align: top; }
-  table.comments tr td .comment {
-    border: 2px solid #ccc;
-    padding: 20px;
-    margin-top: 20px; }
-    table.comments tr td .comment .author {
-      margin-bottom: 20px;
-      color: #555; }
-      table.comments tr td .comment .author .date {
-        opacity: 0.8;
-        float: right;
-        font-size: 0.9em;
-        text-align: right;
-        min-width: 200px; }
-    table.comments tr td .comment .replies .comment {
-      border: 2px solid #eee; }
-    table.comments tr td .comment .comment-images {
-      height: 150px; }
-  table.comments tr td:first-child .comment {
-    margin-right: 10px; }
-  table.comments tr td:last-child .comment {
-    margin-left: 10px; }
-
 .img {
   width: 100%;
   height: 100%;
@@ -241,6 +255,5 @@ td.material-img {
     height: auto;
     width: auto; }
 
-.y-fill {
-  height: 100%;
-  box-sizing: border-box; }
+thead {
+  font-weight: bold; }
