organize pdf style sheets

--- a/app/views/spec_sheet/_components.html.erb
+++ b/app/views/spec_sheet/_components.html.erb
@@ -1,6 +1,6 @@
 <% components = data %>
 <td colspan="2" class="vtop pt3">
-  <table class="components">
+  <table class="components data">
     <thead>
       <tr>
         <td>Image</td>
