--- a/lib/pdfkit/sass/style.scss
+++ b/lib/pdfkit/sass/style.scss
@@ -1,166 +1,10 @@
-@import 'utils';
+@import 'utilities/utils';
+@import 'base/base';
+@import 'components/page';
+@import 'components/image';
+@import 'components/table';
 @import 'modules/comments';
 @import 'modules/cover';
 @import 'modules/instructions';
 @import 'modules/measurements';
-h1,
-h2,
-h3 {
-  margin: 0;
-}
-body {
-  color: #444;
-  font-size: 25px;
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  * {
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-  }
-}
-table {
-  width: 100%;
-  margin: 0;
-  border: 0;
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-.page {
-  height: 419.5mm;
-  width: 596mm;
-  padding: $p3 * 2;
-  position: relative;
-  overflow: hidden;
-  table.main {
-    height: 100%;
-    td.header {
-      .app-title {
-        opacity: 0.5;
-        font-size: 2rem;
-        padding-bottom: $p1;
-      }
-      .page-title {
-        text-transform: uppercase;
-      }
-      table.project-info {
-        tr {
-          td {
-            padding: $p1;
-          }
-        }
-      }
-    }
-    tr.body {
-      height: 100%;
-      > td {
-        width: 50%;
-      }
-      td.content {
-        padding-left: $p3;
-        vertical-align: top;
-      }
-    }
-  }
-  .page-number {
-    display: block;
-    position: absolute;
-    bottom: $p3 * 2;
-    right: $p3 * 2;
-    opacity: 0.6;
-    font-size: 1.5rem;
-    z-index: 2;
-  }
-}
-table.data {
-  > tbody {
-    > tr {
-      > td {
-        padding: $p1;
-      }
-      &:not(:last-child) {
-        td {
-          border-bottom: $b1;
-        }
-      }
-    }
-  }
-}
-table.rows {
-  > tbody {
-    > tr {
-      > td {
-        padding-top: $p3;
-      }
-    }
-    > tr:not(:last-child) {
-      > td {
-        padding-bottom: $p3;
-        border-bottom: $b2;
-        table.data {
-          tr:last-child {
-            td {
-              padding-bottom: 0 !important;
-            }
-          }
-        }
-      }
-    }
-    > tr:not(:first-child) {
-      > td {
-        table.data {
-          tr:first-child {
-            td {
-              padding-top: 0 !important;
-            }
-          }
-        }
-      }
-    }
-  }
-}
-.img {
-  width: 100%;
-  height: 100%;
-  background-size: contain;
-  background-position: center top;
-  background-repeat: no-repeat;
-  position: relative;
-  .anchor {
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 999px;
-    height: 5px;
-    width: 5px;
-    background: lime;
-    &.dot {
-      width: 40px;
-      height: 40px;
-      background: aqua;
-      border: 5px solid white;
-    }
-  }
-}
-.img-left {
-  background-position: left top;
-}
-.img-right {
-  background-position: right top;
-}
-td.material-img {
-  position: relative;
-  .img {
-    position: absolute;
-    top: $p3;
-    right: 0;
-    bottom: $p3;
-    left: 0;
-    height: auto;
-    width: auto;
-  }
-}
-thead {
-  font-weight: bold;
-}
+@import 'modules/materials';
